Updates documentation and example for API consistency

--- a/examples/test.ipynb
+++ b/examples/test.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import Coords_NSGA_II"
+    "from coord_nsga2 import coord_nsga2"
    ]
   },
   {
@@ -18,24 +18,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fun1(coords):\n",
+    "def objective_1(coords):\n",
     "    \"\"\"\n",
     "    coords: shape为(N, 2)的坐标列表\n",
     "    return标量值\n",
     "    \"\"\"\n",
-    "    coords = np.array(coords) #todo: 这里可以把转化提到外面去\n",
+    "    coords = np.array(coords)  # todo: 这里可以把转化提到外面去\n",
     "    return coords[0][0]\n",
     "\n",
     "\n",
-    "def fun2(coords):\n",
+    "def objective_2(coords):\n",
     "    \"\"\"\n",
     "    coords: shape为(N, 2)的坐标列表\n",
     "    return标量值\n",
     "    \"\"\"\n",
     "    coords = np.array(coords)\n",
-    "    return coords[0][1]\n",
-    "\n",
-    "func_list = [fun1, fun2] # 这是优化用的所有多目标函数组成的列表"
+    "    return coords[0][1]"
    ]
   },
   {
@@ -45,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def constraint1(coords):\n",
+    "def constraint_1(coords):\n",
     "    \"\"\"\n",
     "    coords: shape为(N, 2)的坐标列表\n",
     "    return标量值表示违背约束的程度\n",
@@ -54,15 +52,13 @@
     "    return coords[0][0] + coords[0][1] - 1\n",
     "\n",
     "\n",
-    "def constraint2(coords):\n",
+    "def constraint_2(coords):\n",
     "    \"\"\"\n",
     "    coords: shape为(N, 2)的坐标列表\n",
     "    return标量值表示违背约束的程度\n",
     "    \"\"\"\n",
     "    coords = np.array(coords)\n",
-    "    return coords[1][0] + coords[1][1] - 1\n",
-    "\n",
-    "constraint_list = [constraint1, constraint2]  # 这是所有约束函数组成的列表"
+    "    return coords[1][0] + coords[1][1] - 1"
    ]
   },
   {
@@ -83,14 +79,14 @@
    "outputs": [],
    "source": [
     "# 定义优化问题\n",
-    "optimizer = Coords_NSGA_II(func_list=func_list,\n",
-    "                           constraint_list=constraint_list,\n",
-    "                           point_num=100,\n",
-    "                           pop_num=50,\n",
-    "                           prob_cross=0.9,\n",
-    "                           prob_mut=0.1,\n",
-    "                           region=region,\n",
-    "                           seed=42)"
+    "optimizer = coord_nsga2(objectives=[objective_1, objective_2],\n",
+    "                        constraints=[constraint_1, constraint_2],\n",
+    "                        points_num=100,\n",
+    "                        population_size=50,\n",
+    "                        prob_cross=0.9,\n",
+    "                        prob_mut=0.1,\n",
+    "                        region=region,\n",
+    "                        seed=42)"
    ]
   },
   {
@@ -101,11 +97,11 @@
    "outputs": [],
    "source": [
     "# 运行优化\n",
-    "optimizer.run(iter_num=1000,\n",
-    "              verbose=0,  # 0表示不输出日志，其他表示每隔几步输出日志\n",
-    "              converge_handler=None,  # 设定收敛处理器\n",
-    "            #   save_path='results',  # 如果有的话运行完保存，设定保存结果的路径\n",
-    "              )"
+    "result = optimizer.run(iter_num=1000,\n",
+    "                       verbose=0,  # 0表示不输出日志，其他表示每隔几步输出日志\n",
+    "                       converge_handler=None,  # 设定收敛处理器\n",
+    "                       #   save_path='results',  # 如果有的话运行完保存，设定保存结果的路径\n",
+    "                       )"
    ]
   },
   {
