--- a/examples/test.ipynb
+++ b/examples/test.ipynb
@@ -2,50 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "1c231d50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../src/coords_nsga2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "112a57f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from coord_nsga2 import coord_nsga2"
+    "from coords_nsga2 import coords_nsga2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "eae35ce7",
    "metadata": {},
    "outputs": [],
    "source": [
     "def objective_1(coords):\n",
     "    \"\"\"\n",
-    "    coords: shape为(N, 2)的坐标列表\n",
+    "    coords: shape为(N, 2)的坐标列表，已经处理为numpy数组\n",
     "    return标量值\n",
     "    \"\"\"\n",
-    "    coords = np.array(coords)  # todo: 这里可以把转化提到外面去\n",
     "    return coords[0][0]\n",
     "\n",
     "\n",
     "def objective_2(coords):\n",
-    "    \"\"\"\n",
-    "    coords: shape为(N, 2)的坐标列表\n",
-    "    return标量值\n",
-    "    \"\"\"\n",
-    "    coords = np.array(coords)\n",
     "    return coords[0][1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5ce004e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def constraint_1(coords):\n",
     "    \"\"\"\n",
-    "    coords: shape为(N, 2)的坐标列表\n",
+    "    coords: shape为(N, 2)的坐标列表，已经处理为numpy数组\n",
     "    return标量值表示违背约束的程度\n",
     "    \"\"\"\n",
     "    coords = np.array(coords)\n",
@@ -53,10 +58,6 @@
     "\n",
     "\n",
     "def constraint_2(coords):\n",
-    "    \"\"\"\n",
-    "    coords: shape为(N, 2)的坐标列表\n",
-    "    return标量值表示违背约束的程度\n",
-    "    \"\"\"\n",
     "    coords = np.array(coords)\n",
     "    return coords[1][0] + coords[1][1] - 1"
    ]
@@ -73,20 +74,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cb569e6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'region' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# 定义优化问题\u001b[39;00m\n\u001b[32m      2\u001b[39m optimizer = coords_nsga2(objectives=[objective_1, objective_2],\n\u001b[32m      3\u001b[39m                         constraints=[constraint_1, constraint_2],\n\u001b[32m      4\u001b[39m                         n_points=\u001b[32m100\u001b[39m,\n\u001b[32m      5\u001b[39m                         population_size=\u001b[32m50\u001b[39m,\n\u001b[32m      6\u001b[39m                         prob_cross=\u001b[32m0.9\u001b[39m,\n\u001b[32m      7\u001b[39m                         prob_mut=\u001b[32m0.1\u001b[39m,\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m                         region=region,\n\u001b[32m      9\u001b[39m                         seed=\u001b[32m42\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'region' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 定义优化问题\n",
-    "optimizer = coord_nsga2(objectives=[objective_1, objective_2],\n",
-    "                        constraints=[constraint_1, constraint_2],\n",
-    "                        points_num=100,\n",
-    "                        population_size=50,\n",
-    "                        prob_cross=0.9,\n",
-    "                        prob_mut=0.1,\n",
-    "                        region=region,\n",
-    "                        seed=42)"
+    "optimizer = coords_nsga2(objectives=[objective_1, objective_2],\n",
+    "                         constraints=[constraint_1, constraint_2],\n",
+    "                         n_points=100,\n",
+    "                         population_size=50,\n",
+    "                         prob_cross=0.9,\n",
+    "                         prob_mut=0.1,\n",
+    "                         region=region,\n",
+    "                         seed=42)"
    ]
   },
   {
