refactor: rename coords_nsga2 to CoordsNSGA2 and update related imports; add keywords to pyproject.toml

--- a/examples/test.ipynb
+++ b/examples/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "112a57f5",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "from coords_nsga2 import coords_nsga2"
+    "from coords_nsga2 import CoordsNSGA2"
    ]
   },
   {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cb569e6e",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
    ],
    "source": [
     "# 定义优化问题\n",
-    "optimizer = coords_nsga2(objectives=[objective_1, objective_2],\n",
+    "optimizer = CoordsNSGA2(objectives=[objective_1, objective_2],\n",
     "                         constraints=[constraint_1, constraint_2],\n",
     "                         n_points=100,\n",
     "                         population_size=50,\n",
